--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,49 +1,59 @@
-<h2>{{hero.name|uppercase}}Details</h2>
-<div>
-    <span>id:</span>{{hero.id}}
-</div>
-<div>
-<label for="name">nombre de super heroe</label>
-<input id="name"[(ngModel)]="hero.name" placeholder="name">
-</div>
-<div>
-<label for="edad">edad de super heroe</label>
-<input id="edad"[(ngModel)]="hero.edad" placeholder="edad">
-</div>
-<div>
-<label for="poder">poder del super heroe</label>
-<input id="poder"[(ngModel)]="hero.poder" placeholder="poder">
-</div>
-<div>
-<label for="identidad">identidad del super heroe</label>
-<input id="identidad"[(ngModel)]="hero.identidad" placeholder="identidad">
-</div>
-<div>
-<label for="universo">universo del super heroe</label>
-<input id="universo"[(ngModel)]="hero.universo" placeholder="universo">
-</div>
+<h2>Mis heroes Favoritos</h2>
 
-<h2>{{hero2.name|uppercase}}Details</h2>
-<div>
-<span>id:</span>{{hero2.id}}
-</div>
-<div>
-<label for="name">nombre de super heroe</label>
-<input id="name"[(ngModel)]="hero2.name" placeholder="name">
-</div>
-<div>
-<label for="edad">edad de super heroe</label>
-<input id="edad"[(ngModel)]="hero2.edad" placeholder="edad">
-</div>
-<div>
-<label for="poder">poder del super heroe</label>
-<input id="poder"[(ngModel)]="hero2.poder" placeholder="poder">
-</div>
-<div>
-<label for="identidad">identidad del super heroe</label>
-<input id="identidad"[(ngModel)]="hero2.identidad" placeholder="identidad">
-</div>
-<div>
-<label for="universo">universo del super heroe</label>
-<input id="universo"[(ngModel)]="hero2.universo" placeholder="universo">
+<ul class="heroes">
+
+  <li *ngFor="let hero of heroes"
+
+    [class.selected]="hero === selectedHero"
+
+      (click)="onSelect(hero)">
+
+      <span class="badge">{{hero.id}}</span>{{hero.name}}
+
+    </li>
+
+</ul>
+
+<div *ngIf="selectedHero">
+
+  <h2>{{selectedHero.name | uppercase}} detalles</h2>
+
+  <div><span>id: </span>{{selectedHero.id}}</div>
+
+  <div>
+
+    <label for = "hero-name">Heroe Nombre: </label>
+
+      <input id="hero-name" [(ngModel)]="selectedHero.name" placeholder="nombre">
+
+    </div>
+
+
+
+    <div>
+
+    <label for = "hero-edad">Heroe Edad: </label>
+
+      <input id="hero-edad" [(ngModel)]="selectedHero.edad" placeholder="edad">
+
+    </div>
+
+    <div>
+
+        <label for = "hero-poder">Heroe Poder: </label>
+    
+          <input id="hero-poder" [(ngModel)]="selectedHero.poder" placeholder="poder">
+    
+        </div>
+
+        <div>
+
+            <label for = "hero-identidad">Heroe identidad: </label>
+        
+              <input id="hero-identidad" [(ngModel)]="selectedHero.identidad" placeholder="identidad">
+        
+            </div>
+        
+    
+
 </div>
