--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -53,7 +53,6 @@
               <input id="hero-identidad" [(ngModel)]="selectedHero.identidad" placeholder="identidad">
         
             </div>
-        
-    
-
 </div>
+
+<app-heroes-detail [hero]="selectedHero"></app-heroes-detail>
