Practica Completa de Heroes

--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -55,4 +55,4 @@
             </div>
 </div>
 
-<app-heroes-detail [hero]="selectedHero"></app-heroes-detail>
+<app-hero-detail [hero]="selectedHero"></app-hero-detail>
