--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -1,11 +1,11 @@
 
 <div *ngIf = "hero">
     <h2>{{hero.name | uppercase}} Detalles</h2>
-<div><span>id: </span>{{hero.id | uppercase}}</div>
-<di>
-   <label fro="hero-name">Hero Nombre: </label>
+<div><span>id: </span>{{hero.id}}</div>
+<div>
+   <label for="hero-name">Hero Nombre: </label>
    <input id="hero-name" [(ngModel)]="hero.name" placeholder="name"> 
-</di>
+</div>
 </div>
 
 
