--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -5,4 +5,5 @@
     <label for="hero-name">Heroe Nombre: </label>
     <input id="hero-name" [(ngModel)]="hero.name" placeholder="name">
   </div>
+  <button (click)="goBack()">Regresar</button>
 </div>
