--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -1,9 +1,10 @@
 <div *ngIf="hero">
-  <h2>{{hero.name | uppercase}} Detalles</h2>
-  <div><span> id: </span>{{hero.id}}</div>
+  <h2>{{hero.name | uppercase}} Details</h2>
+  <div><span>id: </span>{{hero.id}}</div>
   <div>
-    <label for="hero-name">Heroe Nombre: </label>
-    <input id="hero-name" [(ngModel)]="hero.name" placeholder="name">
+    <label for="hero-name">Hero name: </label>
+    <input id="hero-name" [(ngModel)]="hero.name" placeholder="Hero name"/>
   </div>
-  <button (click)="goBack()">Regresar</button>
+  <button (click)="goBack()">go back</button>
+  <button (click)="save()">save</button>
 </div>
